fix(styles): 💄 add z-index to menu

--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ header h1 {
 .menu {
   display: flex;
   margin: 0 auto;
+  z-index: 10;
 }
 
 /* Botones del menú */
